--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
+spring.redis.host = 127.0.0.1
+spring.redis.port = 6379
